Demand Navigator/src/objects/Fiscal_Year_Model__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period_Id__c</fullName>
        <label>Fiscal Period Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <label>Period Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Number__c</fullName>
        <label>Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <label>Record Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>FCST Planning Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Period_Id__c</columns>
        <columns>Period_Name__c</columns>
        <columns>Period_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Fiscal_Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Fiscal_Year_Period_Listing_All</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Fiscal_Period_Id__c</columns>
        <columns>Fiscal_Quarter__c</columns>
        <columns>Period_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Record_Source__c</columns>
        <columns>Period_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>Fiscal Year Period Listing (All)</label>
    </listViews>
    <nameField>
        <label>Planning Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Planning Fiscal Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>